[package]
name = "bludev"
version = "0.1.0"
edition = "2021"
authors = ["Chris I"]
description = "A keyboard-only interface for MacOS bluetooth device control."
repository = "https://github.com/chrisisler/bludev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
